--- a/jinja-templates/jinja-template.j2
+++ b/jinja-templates/jinja-template.j2
@@ -1,8 +1,8 @@
 hostname {{hostname}}
 interface loopback150
  description *** Template loopback150 *** 
- ipv4 address {{interfaces.loopback150.ipv4}} {{interfaces.loopback150.mask}}
+ ip address {{interfaces.loopback150.ipv4}} {{interfaces.loopback150.mask}}
 
 interface loopback200
  description *** Template loopback200 *** 
- ipv4 address {{interfaces.loopback200.ipv4}} {{interfaces.loopback200.mask}}
+ ip address {{interfaces.loopback200.ipv4}} {{interfaces.loopback200.mask}}
